k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: hr-platform-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: backend-uploads-pvc
